@@ -1,10 +1,10 @@
 =head1 NAME
 
-MooseX::Types::Path::Class::MoreCoercions - Coerce stringable objects to work with MooseX::Types::Path::Class
+MooseX::Types::Path::Class::MoreCoercions - More powerful coercion than MooseX::Types::Path::Class
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
@@ -13,11 +13,17 @@ version 0.001
   package Foo;
 
   use Moose;
-  use MooseX::Types::Path::Class::MoreCoercions qw/File/;
+  use MooseX::Types::Path::Class::MoreCoercions qw/File AbsDir/;
 
   has filename => (
     is => 'ro',
     isa => 'File',
+    coerce => 1,
+  );
+
+  has directory => (
+    is => 'ro',
+    isa => 'AbsDir',
     coerce => 1,
   );
 
@@ -26,12 +32,24 @@ version 0.001
   my $tmp = File::Temp->new;
 
   Foo->new( filename => $tmp ); # coerced to Path::Class::File
+  Foo->new( directory => '.' ); # coerced to dir('.')->absolute
 
 =head1 DESCRIPTION
 
-This module extends L<MooseX::Types::Path::Class> to allow objects
-that have overloaded stringification to be coerced into L<Path::Class>
-objects.
+This module extends L<MooseX::Types::Path::Class> with more powerful coercions,
+including:
+
+=over 4
+
+=item *
+
+coercing objects with overloaded stringification
+
+=item *
+
+coercing to absolute paths
+
+=back
 
 =for Pod::Coverage method_names_here
 
@@ -44,10 +62,20 @@ This module uses L<MooseX::Types> to define the following subtypes.
 C<Dir> is a subtype of C<MooseX::Types::Path::Class::Dir>.  Objects with
 overloaded stringification are coerced as strings if coercion is enabled.
 
+=head2 AbsDir
+
+C<AbsDir> is a subtype of C<Dir> (above).
+Objects are also coerced to an absolute path.
+
 =head2 File
 
 C<File> is a subtype of C<MooseX::Types::Path::Class::File>.  Objects with
 overloaded stringification are coerced as strings if coercion is enabled.
+
+=head2 AbsFile
+
+C<AbsFile> is a subtype of C<File> (above).
+Objects are also coerced to an absolute path.
 
 =head1 CAVEATS
 
