@@ -7,3 +7,5 @@ copyright_year   = 2012
 [@DAGOLDEN]
 :version = 0.027
 stopwords = stringable
+stopwords = AbsFile
+stopwords = AbsDir
